fix accessibility contrast issue

--- a/newbie/stats-preview-card-component/style.css
+++ b/newbie/stats-preview-card-component/style.css
@@ -165,7 +165,7 @@
         font-weight: 400;
         letter-spacing: 1px;
         line-height: calc(1em + .5rem);
-        opacity: 0.6;
+        opacity: 0.75;
         text-transform: uppercase;
     }
 
